# kotidashboard

./: .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BootPiDash.txt  CHANGELOG.md  CHANGELOG_EN.md  DeployToPi.ps1  GitSync.bat  LICENSE  QUALITY.md  README.md  README_en.md  README_fi.md  REFACTORING.md  Update-Dependencies.ps1  api.py  bandit.yaml  check_imports.py  config.py  hue_sensors.json  id_ed25519.pub  main.py  nimipaivat_fi.json  packages_Kotidashboard.dot  project_metrics.ps1  pyhat_fi.json  pyproject.toml  requirements-linux.txt  requirements-windows.txt  requirements.in  requirements.txt  setup.cfg  streamlit.out  style.css  ui.py  update.sh  (+2 more)
assets/: style.css
bak/: api - Copy.py  app - Copy.py  app.py  app.py.before_1B_backup.py  app.py.before_1C_backup.py  app.py.before_2A_backup.py  app.py.before_2B_backup.py  app.py.before_3A_backup.py  app.py.before_3C_backup.py  app.py.before_4A_backup.py  app.py.before_butterfly_tuning_backup.py  app.py.before_butterfly_zindex_fix_backup.py  app.py.before_card_alignment_tweak_backup.py  app.py.before_centering_cards_stringreplace_backup.py  app_bak.py  ui - Copy.py
data/: WMO_Foreca-koodit.xlsx  btc_ath_cache.json  nimipaivat_fi.json  pyhat_fi.json
docs/: CARD_NAMEDAY.md  classes_Kotidashboard.dot
foreca/: WMO_weather_terms_fi.xlsx
scripts/: .coverage  Generate-UML.ps1  ListHueObjects.ps1  SetupQuality.ps1  Update-Dependencies.ps1  update.sh
src/: api.py  btc_ath_cache.json  card_heos.py  config.py  heos_client.py  logger_config.py  paths.py  ui.py  utils.py  utils_colors.py  utils_net.py  utils_sun.py  utils_weather.py  weather_icons.py
tests/: __init.py__  (+59 more)
(+69 files in other folders)
