[project]
name = "homedashboard"
version = "0.1.0"
description = "Kotidashboard – henkilökohtainen Streamlit-näkymä"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "requests",
    "pytest",
    "pytest-cov",
    "bandit",
]

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true
show-fixes = true
exclude = ["venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]  # Rivin pituuden voi käsitellä erikseen halutessa

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
